hexagon alignemnt fix

--- a/html/_ui/css/app.css
+++ b/html/_ui/css/app.css
@@ -1686,7 +1686,7 @@ text-align: center;
 .v1-hexa-box .hexBottom:after {
   content: "";
   position: absolute;
-  width: 145.0000px;
+  width: 149.0000px;
   height: 83.71578903249574px;
   -webkit-transform:  rotate(45deg) scaleY(1.7321) translateY(-41.8579px);
   -ms-transform:      rotate(45deg) scaleY(1.7321) translateY(-41.8579px);
